fixed overlapped text in search user suggestion section

--- a/frontend/src/components/team/viewMembers/SuggestionBox.module.css
+++ b/frontend/src/components/team/viewMembers/SuggestionBox.module.css
@@ -25,6 +25,9 @@
     line-height: 32px;
     font-size: 18px;
     color: #48484A;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .suggestion-box ul li:hover {
